// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageLifecycleProvider Does not raise events twice for a single route 1`] = `
Array [
  Object {
    "originator": "PageEvents",
    "payload": Object {
      "location": Object {
        "hash": "",
        "key": "...",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
    },
    "timeStamp": 0,
    "type": "page-load-started",
  },
  Object {
    "originator": "PageEvents",
    "payload": Object {
      "location": Object {
        "hash": "",
        "key": "...",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
    },
    "timeStamp": 0,
    "type": "page-load-complete",
  },
  Object {
    "originator": "PageEvents",
    "payload": Object {
      "location": Object {
        "hash": "",
        "key": "...",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
    },
    "timeStamp": 0,
    "type": "page-load-complete",
  },
]
`;

exports[`PageLifecycleProvider can pass extra data to pages 1`] = `
Array [
  Object {
    "originator": "PageEvents",
    "payload": Object {
      "home": "isHome",
      "location": Object {
        "hash": "",
        "key": "...",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "pageExtra": "Some extra page data",
    },
    "timeStamp": 0,
    "type": "page-load-started",
  },
  Object {
    "originator": "PageEvents",
    "payload": Object {
      "home": "isHome",
      "location": Object {
        "hash": "",
        "key": "...",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "pageExtra": "Some extra page data",
    },
    "timeStamp": 0,
    "type": "page-load-complete",
  },
  Object {
    "originator": "PageEvents",
    "payload": Object {
      "foo": "isFoo",
      "location": Object {
        "hash": "",
        "key": "...",
        "pathname": "/foo",
        "search": "",
        "state": undefined,
      },
    },
    "timeStamp": 0,
    "type": "page-load-started",
  },
  Object {
    "originator": "PageEvents",
    "payload": Object {
      "foo": "isFoo",
      "location": Object {
        "hash": "",
        "key": "...",
        "pathname": "/foo",
        "search": "",
        "state": undefined,
      },
    },
    "timeStamp": 0,
    "type": "page-load-complete",
  },
]
`;

exports[`PageLifecycleProvider raises completed event after data loaded and content re-rendered 1`] = `
Array [
  Object {
    "originator": "PageEvents",
    "payload": Object {
      "location": Object {
        "hash": "",
        "key": "...",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
    },
    "timeStamp": 0,
    "type": "page-load-started",
  },
  Object {
    "originator": "PageEvents",
    "payload": Object {
      "location": Object {
        "hash": "",
        "key": "...",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
    },
    "timeStamp": 0,
    "type": "page-load-complete",
  },
]
`;

exports[`PageLifecycleProvider raises completed event after lazy loaded page has completed load data 1`] = `
Array [
  Object {
    "originator": "PageEvents",
    "payload": Object {
      "location": Object {
        "hash": "",
        "key": "...",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
    },
    "timeStamp": 0,
    "type": "page-load-started",
  },
]
`;

exports[`PageLifecycleProvider raises completed event after lazy loaded page has completed load data 2`] = `
Array [
  Object {
    "originator": "PageEvents",
    "payload": Object {
      "location": Object {
        "hash": "",
        "key": "...",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
    },
    "timeStamp": 0,
    "type": "page-load-started",
  },
  Object {
    "originator": "PageEvents",
    "payload": Object {
      "location": Object {
        "hash": "",
        "key": "...",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
    },
    "timeStamp": 0,
    "type": "page-load-complete",
  },
]
`;

exports[`PageLifecycleProvider raises events when page navigated 1`] = `
Array [
  Object {
    "originator": "PageEvents",
    "payload": Object {
      "location": Object {
        "hash": "",
        "key": "...",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
    },
    "timeStamp": 0,
    "type": "page-load-started",
  },
  Object {
    "originator": "PageEvents",
    "payload": Object {
      "location": Object {
        "hash": "",
        "key": "...",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
    },
    "timeStamp": 0,
    "type": "page-load-complete",
  },
  Object {
    "originator": "PageEvents",
    "payload": Object {
      "location": Object {
        "hash": "",
        "key": "...",
        "pathname": "/foo",
        "search": "",
        "state": undefined,
      },
    },
    "timeStamp": 0,
    "type": "page-load-started",
  },
  Object {
    "originator": "PageEvents",
    "payload": Object {
      "location": Object {
        "hash": "",
        "key": "...",
        "pathname": "/foo",
        "search": "",
        "state": undefined,
      },
    },
    "timeStamp": 0,
    "type": "page-load-complete",
  },
]
`;

exports[`PageLifecycleProvider raises loading event after render 1`] = `
Array [
  Object {
    "originator": "PageEvents",
    "payload": Object {
      "location": Object {
        "hash": "",
        "key": "...",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
    },
    "timeStamp": 0,
    "type": "page-load-started",
  },
]
`;
